--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         }
     ],
     "require": {
-        "php": "^7.2",
-        "laravel/framework": "^6.0"
+        "php": "^7.2|^8.0.2|^8.1",
+        "laravel/framework": "5.3.*|5.4.*|5.5.*|5.6.*|5.7.*|5.8.*|6.*|7.*|8.*|^9.0"
     },
     "require-dev": {
         "illuminate/support": "^6.0.2",
