--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,15 @@
         }
     ],
     "require": {
-        "php": "^7.2|^8.0.2|^8.1",
-        "laravel/framework": "5.3.*|5.4.*|5.5.*|5.6.*|5.7.*|5.8.*|6.*|7.*|8.*|^9.0"
+        "php": "^7.3|^8.0|^8.1|^8.2",
+        "laravel/framework": "6.*|7.*|8.*|9.*|10.*"
     },
     "require-dev": {
-        "illuminate/support": "^6.0.2",
-        "orchestra/testbench": "^3.8.5",
-        "phpunit/phpunit": "^8.3.4",
-        "laravel/laravel": "^6.0"
+        "illuminate/support": "^8.5",
+        "laravel/laravel": "^8.0",
+        "laravel/tinker": "^2.4",
+        "orchestra/testbench": "^6.0",
+        "suin/phpcs-psr4-sniff": "^3.0"
     },
     "autoload": {
         "psr-4": {
