--- a/composer.json
+++ b/composer.json
@@ -44,5 +44,7 @@
     },
     "config": {
         "sort-packages": true
-    }
+    },
+    "minimum-stability": "stable",
+    "prefer-stable": true
 }
